--- a/config/config_backtesting.json
+++ b/config/config_backtesting.json
@@ -318,5 +318,49 @@
         "risk_reduction_factor": 0.8
       }
     }
+  },
+  "var_risk_management": {
+    "enabled": true,
+    "check_frequency_minutes": 60,
+    "var_config": {
+      "confidence_level": 0.95,
+      "lookback_days": 252,
+      "method": "historical",
+      "update_frequency": 60,
+      "use_ewma": true,
+      "ewma_lambda": 0.94,
+      "monte_carlo_simulations": 10000,
+      "use_cornish_fisher": true
+    },
+    "risk_limits": {
+      "daily_var_multiplier": 2.0,
+      "daily_cvar_multiplier": 1.5,
+      "intraday_var_multiplier": 1.0,
+      "use_dynamic_limits": true,
+      "min_var_limit_pct": 0.02,
+      "max_var_limit_pct": 0.10,
+      "consecutive_breach_limit": 3,
+      "breach_cooldown_hours": 24
+    },
+    "position_limits": {
+      "max_position_var_contribution": 0.3,
+      "concentration_penalty": true,
+      "correlation_adjustment": true,
+      "stress_test_multiplier": 3.0
+    },
+    "actions": {
+      "var_breach_action": "reduce_positions",
+      "position_reduction_pct": 0.5,
+      "stop_new_trades_at_pct": 0.8,
+      "force_close_at_pct": 1.2,
+      "gradual_reduction": true,
+      "prioritize_losing_positions": true
+    },
+    "regime_adjustments": {
+      "volatile_market_multiplier": 0.7,
+      "trending_market_multiplier": 1.2,
+      "sideways_market_multiplier": 1.0,
+      "crisis_mode_multiplier": 0.5
+    }
   }
 }
