--- a/config/config_backtesting.json
+++ b/config/config_backtesting.json
@@ -174,7 +174,9 @@
     "start_time": "09:00:00",
     "end_time": "23:30:00",
     "timezone": "Asia/Seoul",
-    "log_level": "INFO"
+    "log_level": "INFO",
+    "warmup_period_minutes": 30,
+    "max_stop_limit_warnings": 5
   },
   "risk_management": {
     "enabled": true,
