update optimization process

--- a/config/config_optimize.json
+++ b/config/config_optimize.json
@@ -1,9 +1,17 @@
 {
+    "data": {
+        "end_date": "2025-07-27",
+        "lookback_days": 60,
+        "markets": ["KRW-ETH", "KRW-BTC", "KRW-SOL", "KRW-ADA", "KRW-DOT", "KRW-XRP"],
+        "candle_unit": 1,
+        "database_directory": "data/candles",
+        "database_pattern": "{market}_candles.db"
+    },
     "optimization": {
-        "n_trials": 100,
+        "n_trials": 50,
         "n_jobs": -1,
-        "timeout": 3600,
-        "objective": "risk_adjusted_return",
+        "timeout": 600,
+        "objective": "sharpe_ratio",
         "direction": "maximize",
         "sampler": "TPE",
         "pruner": "MedianPruner",
@@ -16,76 +24,43 @@
         "min_data_points": 1000,
         "max_positions": 3,
         "order_type": "limit",
+        "fees": {
+            "limit_order": {
+                "krw_market": 0.0005,
+                "btc_market": 0.0025,
+                "usdt_market": 0.0025
+            },
+            "market_order": {
+                "krw_market": 0.00139,
+                "btc_market": 0.0025,
+                "usdt_market": 0.0025
+            }
+        },
+        "slippage": {
+            "limit_order": 0.0000,
+            "market_order": 0.0005
+        },
         "position_sizing": {
             "max_position_pct": 0.2,
             "use_dynamic_sizing": false,
-            "use_garch_sizing": false,
-            "garch_config": {
-                "lookback_period": 252,
-                "update_frequency": 24,
-                "vol_target": 0.15,
-                "leverage_limit": 1.0
-            }
+            "use_garch_sizing": false
         },
         "risk_management": {
-            "enabled": true,
-            "stop_loss": {
-                "enabled": true,
-                "initial_stop_pct": 0.02,
-                "order_type": "stop_limit",
-                "limit_offset_pct": 0.005,
-                "max_attempts_before_market": 3,
-                "trailing_stop": {
-                    "enabled": true,
-                    "activation_pct": 0.01,
-                    "trail_pct": 0.015,
-                    "order_type": "stop_limit"
-                }
-            },
-            "take_profit": {
-                "enabled": true,
-                "target_pct": 0.03,
-                "partial_exits": [
-                    {"pct": 0.015, "size": 0.5},
-                    {"pct": 0.025, "size": 0.3}
-                ]
-            },
-            "time_based_exits": {
-                "enabled": false,
-                "max_hold_periods": 1440
-            }
+            "enabled": true
         },
         "var_risk_management": {
-            "enabled": false,
-            "confidence_level": 0.95,
-            "lookback_period": 30,
-            "max_var_pct": 0.05,
-            "check_frequency_minutes": 60
+            "enabled": false
         },
         "regime_analysis": {
-            "enabled": true,
-            "analyze_performance": true,
-            "regime_config": {
-                "lookback_period": 20,
-                "volatility_threshold": 0.02,
-                "trend_threshold": 0.0001,
-                "volume_ma_period": 20,
-                "atr_period": 14,
-                "adx_period": 14,
-                "adx_threshold": 25,
-                "ma_periods": [20, 50],
-                "bb_period": 20,
-                "bb_std": 2.0,
-                "volume_period": 20,
-                "choppiness_period": 14
-            }
+            "enabled": false,
+            "analyze_performance": false
         },
         "execution": {
-            "log_level": "WARNING",
-            "max_log_trades": 100,
+            "log_level": "CRITICAL",
+            "max_log_trades": 0,
             "save_detailed_results": false,
-            "warmup_period_minutes": 30,
-            "max_stop_limit_warnings": 1
+            "warmup_period_minutes": 0,
+            "max_stop_limit_warnings": 0
         }
     },
     "strategy_params": {
@@ -224,6 +199,59 @@
             "base_position_size": {"type": "float", "low": 0.15, "high": 0.35, "step": 0.05},
             "strategy_rotation": {"type": "categorical", "choices": [true, false]},
             "smooth_transition": {"type": "categorical", "choices": [true, false]}
+        },
+        "hf_vwap": {
+            "vwap_period": {"type": "int", "low": 15, "high": 60, "step": 5},
+            "vwap_threshold": {"type": "float", "low": 0.001, "high": 0.005, "step": 0.0005},
+            "volume_threshold": {"type": "float", "low": 1.0, "high": 2.0, "step": 0.2},
+            "min_spread_threshold": {"type": "float", "low": 0.0005, "high": 0.002, "step": 0.0005},
+            "min_volume_ratio": {"type": "float", "low": 1.0, "high": 1.5, "step": 0.1},
+            "use_liquidity_filter": {"type": "categorical", "choices": [true, false]},
+            "use_regime_detection": {"type": "categorical", "choices": [true, false]},
+            "order_flow_period": {"type": "int", "low": 5, "high": 20, "step": 5},
+            "flow_threshold": {"type": "float", "low": 0.55, "high": 0.75, "step": 0.05},
+            "require_timeframe_alignment": {"type": "categorical", "choices": [true, false]},
+            "require_flow_confirmation": {"type": "categorical", "choices": [true, false]}
+        },
+        "adaptive_hf_vwap": {
+            "vwap_period": {"type": "int", "low": 15, "high": 60, "step": 5},
+            "vwap_threshold": {"type": "float", "low": 0.001, "high": 0.005, "step": 0.0005},
+            "volume_threshold": {"type": "float", "low": 1.0, "high": 2.0, "step": 0.2},
+            "min_spread_threshold": {"type": "float", "low": 0.0005, "high": 0.002, "step": 0.0005},
+            "adaptation_window": {"type": "int", "low": 720, "high": 2880, "step": 360},
+            "use_liquidity_filter": {"type": "categorical", "choices": [true, false]},
+            "use_regime_detection": {"type": "categorical", "choices": [true, false]},
+            "flow_threshold": {"type": "float", "low": 0.55, "high": 0.75, "step": 0.05}
+        },
+        "mt_bollinger": {
+            "bb_period": {"type": "int", "low": 15, "high": 30, "step": 5},
+            "bb_std_dev": {"type": "float", "low": 1.5, "high": 2.5, "step": 0.25},
+            "lower_threshold": {"type": "float", "low": 0.05, "high": 0.2, "step": 0.05},
+            "upper_threshold": {"type": "float", "low": 0.8, "high": 0.95, "step": 0.05},
+            "min_signal_strength": {"type": "float", "low": 0.2, "high": 0.6, "step": 0.1},
+            "require_timeframe_alignment": {"type": "categorical", "choices": [true, false]},
+            "min_volume_confirmation": {"type": "float", "low": 1.0, "high": 1.8, "step": 0.2}
+        },
+        "mt_macd": {
+            "score_threshold": {"type": "float", "low": 0.2, "high": 0.5, "step": 0.1},
+            "require_convergence": {"type": "categorical", "choices": [true, false]},
+            "use_divergence": {"type": "categorical", "choices": [true, false]},
+            "min_momentum": {"type": "float", "low": 0.05, "high": 0.3, "step": 0.05}
+        },
+        "enhanced_ensemble": {
+            "max_active_strategies": {"type": "int", "low": 2, "high": 5, "step": 1},
+            "weight_decay": {"type": "float", "low": 0.9, "high": 0.98, "step": 0.02},
+            "performance_window": {"type": "int", "low": 60, "high": 180, "step": 30},
+            "regime_stability_threshold": {"type": "int", "low": 5, "high": 20, "step": 5},
+            "confidence_threshold": {"type": "float", "low": 0.4, "high": 0.8, "step": 0.1}
         }
+    },
+    "strategy": {
+        "name": "mean_reversion",
+        "parameters": {}
+    },
+    "regime_config": {},
+    "execution": {
+        "log_level": "ERROR"
     }
 }
